修复文件格式

--- a/blog/articles/13-408.md
+++ b/blog/articles/13-408.md
@@ -1,8 +1,8 @@
 ---
 title: "将考研 408 专业课复习过程开源是什么体验？"
 date: 2020-09-10
-draft: false
-tags: [408, 考研]
+draft: true
+tags: ['408', 考研]
 categories: [📗 学习笔记]
 ---
 
